--- a/git-advanced.html
+++ b/git-advanced.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -1010,7 +1010,7 @@ We should not have any conflicts,
 and all of our tests should pass.</p></li>
 </ol>
 <p>Most experienced developers use this <a href="glossary.html#branch-per-feature-workflow">branch-per-feature</a> workflow,
-but what exactly is a “feature”?
+but what exactly is a “feature?”
 These rules make sense for small projects with or without collaborators:</p>
 <ol style="list-style-type: decimal">
 <li><p>Anything cosmetic that is only one or two lines long can be done in <code>master</code> and committed right away.
@@ -1055,7 +1055,7 @@ who are all comfortable using Git,
 but if the project is larger,
 or if contributors are worried that they might make a mess in the <code>master</code> branch,
 the second approach is safer.</p>
-<p>Git itself doesn’t have any notion of a “main repository”,
+<p>Git itself doesn’t have any notion of a “main repository,”
 but <a href="glossary.html#forge">forges</a> like GitHub, GitLab, and BitBucket all encourage people
 to use Git in ways that effectively create one.
 Suppose,
@@ -1216,7 +1216,7 @@ almost everyone uses <a href="glossary.html#pull-request">pull requests</a> inst
 <p>Pull requests aren’t part of Git itself,
 but a great way to collaborate with others using <a href="glossary.html#forge">forges</a> like GitHub.
 A pull request is essentially a note saying,
-“Someone would like to merge branch A of repository B into branch X of repository Y”.
+“Someone would like to merge branch A of repository B into branch X of repository Y.”
 The pull request does not contain the changes,
 but instead points at two particular branches.
 If either branch changes,
@@ -1312,7 +1312,7 @@ Figure 5.15: Summary of Pull Request
 Figure 5.16: Filling In Pull Request
 </p>
 </div>
-<p>and clicks on “Create Pull Request”.
+<p>and clicks on “Create Pull Request.”
 GitHub does that
 and then displays a page showing the new pull request:</p>
 <div class="figure"><span id="fig:image-new-pull-request"></span>
@@ -1372,7 +1372,7 @@ Figure 5.23: Writing Comment
 </p>
 </div>
 <p>She only wants to make one comment rather than write a lengthier multi-comment review,
-so she clicks on “Add single comment”.
+so she clicks on “Add single comment.”
 GitHub redisplays the page with her comment inserted inline:</p>
 <div class="figure"><span id="fig:image-pr-with-comment"></span>
 <img src="figures/FIXME.png" alt="Pull Request With Comment"  />
@@ -1401,7 +1401,7 @@ Figure 5.25: Pull Request With Fix
 </p>
 </div>
 <p>Satisfied,
-she goes back to the “Conversation” tab and clicks on “Merge”.
+she goes back to the “Conversation” tab and clicks on “Merge.”
 The icon at the top of the PR’s page changes text and color to show that the merge was successful:</p>
 <div class="figure"><span id="fig:image-pr-successful-merge"></span>
 <img src="figures/FIXME.png" alt="Successful Merge"  />
