--- a/git-cmdline.html
+++ b/git-cmdline.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -787,7 +787,7 @@ Changes not staged for commit:
 
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)</code></pre>
 <p>The last line is the key phrase:
-“no changes added to commit”.
+“no changes added to commit.”
 We have changed this file,
 but we haven’t told Git we want to save those changes
 (which we do with <code>git add</code>)
@@ -1023,7 +1023,7 @@ shows the same thing as <code>git diff</code>.
 Instead of typing in a version identifier to back up one commit,
 though,
 we can simply use <code>HEAD~1</code> (where <code>~</code> is the tilde symbol).
-This shorthand is read “HEAD minus one”,
+This shorthand is read “HEAD minus one,”
 and gives us the difference to the <em>previous</em> saved version.
 <code>git diff -r HEAD~2</code> goes back two revisions and so on.</p>
 <p>We can also look at the differences between two saved versions
