--- a/glossary.html
+++ b/glossary.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -1604,7 +1604,7 @@ FIXME</p>
 <dd>FIXME
 </dd>
 <dt><strong>Tidy data</strong><a id="tidy-data"></a></dt>
-<dd>As defined in <span class="citation">Wickham (<a href="references.html#ref-Wick2014" role="doc-biblioref">2014</a>)</span>, tabular data is tidy if (1) each variable is in one column,
+<dd>As defined in <span class="citation"><a href="references.html#ref-Wick2014" role="doc-biblioref">Wickham</a> (<a href="references.html#ref-Wick2014" role="doc-biblioref">2014</a>)</span>, tabular data is tidy if (1) each variable is in one column,
 (2) each different observation of that variable is in a different row,
 (3) there is one table for each kind of variable, and
 (4) if there are multiple tables, each includes a key so that related data can be linked.
