--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -602,7 +602,7 @@ code span.wa { color: #008000; font-weight: bold; } /* Warning */
 <div id="header">
 <h1 class="title">Merely Useful: Using R for Research Software Engineering</h1>
 <p class="author"><em>Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson</em></p>
-<p class="date"><em>2020-11-09</em></p>
+<p class="date"><em>2020-11-22</em></p>
 </div>
 <div id="welcome-to-the-course-webpage" class="section level1" number="1">
 <h1><span class="header-section-number">Chapter 1</span> Welcome to the course webpage!</h1>
@@ -659,7 +659,7 @@ everyone we met through <a href="https://carpentries.org/">the Carpentries</a>.
 We are also grateful to <a href="https://www.insightdatascience.com/">Insight Data Science</a> for sponsoring the early stages of this work
 and to everyone who has contributed,
 particularly Jonathan Dursi
-and the authors of <span class="citation">(Noble, <a href="references.html#ref-Nobl2009" role="doc-biblioref">2009</a>; Haddock and Dunn, <a href="references.html#ref-Hadd2010" role="doc-biblioref">2010</a>; Wilson et al., <a href="references.html#ref-Wils2014" role="doc-biblioref">2014</a>, <a href="references.html#ref-Wils2017" role="doc-biblioref">2017</a>; Scopatz and Huff, <a href="references.html#ref-Scop2015" role="doc-biblioref">2015</a>; Taschuk and Wilson, <a href="references.html#ref-Tasc2017" role="doc-biblioref">2017</a>; Brown and Wilson, <a href="references.html#ref-Brow2018" role="doc-biblioref">2018</a>; Devenyi et al., <a href="references.html#ref-Deve2018" role="doc-biblioref">2018</a>; Sholler et al., <a href="references.html#ref-Shol2019" role="doc-biblioref">2019</a>; Wilson, <a href="references.html#ref-Wils2019" role="doc-biblioref">2019</a><a href="references.html#ref-Wils2019" role="doc-biblioref">b</a>)</span>.</p>
+and the authors of <span class="citation">(<a href="references.html#ref-Nobl2009" role="doc-biblioref">Noble, 2009</a>; <a href="references.html#ref-Hadd2010" role="doc-biblioref">Haddock and Dunn, 2010</a>; <a href="references.html#ref-Wils2014" role="doc-biblioref">Wilson et al., 2014</a>, <a href="references.html#ref-Wils2017" role="doc-biblioref">2017</a>; <a href="references.html#ref-Scop2015" role="doc-biblioref">Scopatz and Huff, 2015</a>; <a href="references.html#ref-Tasc2017" role="doc-biblioref">Taschuk and Wilson, 2017</a>; <a href="references.html#ref-Brow2018" role="doc-biblioref">Brown and Wilson, 2018</a>; <a href="references.html#ref-Deve2018" role="doc-biblioref">Devenyi et al., 2018</a>; <a href="references.html#ref-Shol2019" role="doc-biblioref">Sholler et al., 2019</a>; <a href="references.html#ref-Wils2019" role="doc-biblioref">Wilson, 2019b</a>)</span>.</p>
 
 </div>
 </div>
