--- a/publish.html
+++ b/publish.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -617,7 +617,7 @@ is <em>not</em> the scholarship itself,
 it is merely <em>advertising</em> of the scholarship.
 The actual scholarship is the complete software development environment
 and the complete set of instructions which generated the figures.</p>
-<p>— Jonathan Buckheit and David Donoho, paraphrasing Jon Claerbout, in <span class="citation">Buckheit and Donoho (<a href="references.html#ref-Buck1995" role="doc-biblioref">1995</a>)</span></p>
+<p>— Jonathan Buckheit and David Donoho, paraphrasing Jon Claerbout, in <span class="citation"><a href="references.html#ref-Buck1995" role="doc-biblioref">Buckheit and Donoho</a> (<a href="references.html#ref-Buck1995" role="doc-biblioref">1995</a>)</span></p>
 </blockquote>
 <p>As the quote suggests,
 modern publishing involves much more than simply producing a report.
@@ -717,7 +717,7 @@ so that they appear on its home page and can easily be found by search engines.<
 </ul>
 <p>The last point is often the hardest for people to implement,
 since many researchers have never seen a well-documented dataset.
-We draw inspiration from the data catalog included in <a href="https://github.com/the-pudding/data/blob/master/pockets/README.md">the repository</a> for <span class="citation">Diehm and Thomas</span>
+We draw inspiration from the data catalog included in <a href="https://github.com/the-pudding/data/blob/master/pockets/README.md">the repository</a> for <span class="citation"><a href="references.html#ref-Dieh2018" role="doc-biblioref">Diehm and Thomas</a></span>
 and include a file <code>./data/README.md</code> in every project
 that looks like this:</p>
 <pre><code>-   Infants born to women with HIV receiving an HIV test within two months of birth, 2009-2017
@@ -784,7 +784,7 @@ Note also that calling a field “NA” is asking for trouble…</p>
 <div id="publish-fair" class="section level2" number="13.4">
 <h2><span class="header-section-number">13.4</span> What standards of data sharing should I aspire to?</h2>
 <p>The <a href="https://www.go-fair.org/fair-principles/">FAIR Principles</a> describe what research data should look like.
-They are still aspirational for most researchers <span class="citation">(Brock)</span>,
+They are still aspirational for most researchers <span class="citation">(<a href="references.html#ref-Broc2019" role="doc-biblioref">Brock</a>)</span>,
 but they tell us what to aim for.
 The most immediately important elements of the FAIR Principles are outlined below.</p>
 <div id="data-should-be-findable." class="section level3" number="13.4.1">
