--- a/solutions.html
+++ b/solutions.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -608,7 +608,7 @@ code span.wa { color: #008000; font-weight: bold; } /* Warning */
 <p>The <code>-l</code> option makes <code>ls</code> use a <strong>l</strong>ong listing format, showing not only
 the file/directory names but also additional information such as the file size
 and the time of its last modification. If you use both the <code>-h</code> option and the <code>-l</code> option,
-this makes the file size “<strong>h</strong>uman readable”, i.e. displaying something like <code>5.3K</code>
+this makes the file size “<strong>h</strong>uman readable,” i.e. displaying something like <code>5.3K</code>
 instead of <code>5369</code>.</p>
 </div>
 <div id="exercise-refbash-basics-ex-ls-rt" class="section level3" number="20.1.2">
@@ -690,7 +690,7 @@ identical file names cannot be created.</li>
 <p>We start in the <code>/Users/jamie/data</code> directory, and create a new folder called <code>recombine</code>.
 The second line moves (<code>mv</code>) the file <code>proteins.dat</code> to the new folder (<code>recombine</code>).
 The third line makes a copy of the file we just moved. The tricky part here is where the file was
-copied to. Recall that <code>..</code> means “go up a level”, so the copied file is now in <code>/Users/jamie</code>.
+copied to. Recall that <code>..</code> means “go up a level,” so the copied file is now in <code>/Users/jamie</code>.
 Notice that <code>..</code> is interpreted with respect to the current working
 directory, <strong>not</strong> with respect to the location of the file being copied.
 So, the only thing that will show using ls (in <code>/Users/jamie/data</code>) is the recombine folder.</p>
@@ -990,7 +990,7 @@ expanding it, so it gets passed to the <code>find</code> command.</p>
 <p>Option 2 is incorrect because the shell expands <code>*s.txt</code> instead of passing the wildcard
 expression to <code>find</code>.</p>
 <p>Option 3 is incorrect because it searches the contents of the files for lines which
-do not match “temp”, rather than searching the file names.</p>
+do not match “temp,” rather than searching the file names.</p>
 </div>
 <div id="exercise-refbash-advanced-ex-reading-find" class="section level3" number="20.2.8">
 <h3><span class="header-section-number">F.2.8</span> Exercise <a href="bash-advanced.html#bash-advanced-ex-reading-find">3.8.8</a></h3>
@@ -1252,7 +1252,7 @@ The difficulty is that the article is not linked within the documentation or the
 <li>This dataset is clearly in support of an article. What information can you find about it, and can you find a link to it?
 <ul>
 <li>We can search the dataset name and authorname trying to find this.
-A search for “National Science Foundation (1228602)”,
+A search for “National Science Foundation (1228602),”
 which is the grant information,
 finds the grant page <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1228602" class="uri">https://www.nsf.gov/awardsearch/showAward?AWD_ID=1228602</a>.
 Two articles are linked there,
