--- a/bash-basics.html
+++ b/bash-basics.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -865,12 +865,12 @@ This doesn’t work:</p>
 <pre class="shell"><code>$ cd amira</code></pre>
 <pre class="text"><code>cd: amira: No such file or directory</code></pre>
 <p>because <code>amira</code> on its own is a relative path meaning
-“a file or directory called <code>amira</code> <em>below our current working directory</em>”.
+“a file or directory called <code>amira</code> <em>below our current working directory</em>.”
 To get back home,
 we can either use an absolute path:</p>
 <pre class="shell"><code>$ cd /Users/amira</code></pre>
 <p>or a special relative path called <code>..</code> (two periods in a row with no spaces),
-which always means “the directory that contains the current one”.
+which always means “the directory that contains the current one.”
 The directory one level above the one we are in is called the <a href="glossary.html#parent-directory">parent directory</a>,
 and sure enough,
 <code>..</code> gets us there:</p>
@@ -1046,7 +1046,7 @@ it displays some help in the bottom two lines of the screen
 using the last of these notations:
 for example,
 <code>^G Get Help</code> means “use <kbd>Control</kbd>+<kbd>G</kbd> to get help”
-and <code>^O WriteOut</code> means “use <kbd>Control</kbd>+<kbd>O</kbd> to write out the current file”.</p>
+and <code>^O WriteOut</code> means “use <kbd>Control</kbd>+<kbd>O</kbd> to write out the current file.”</p>
 </blockquote>
 <p>Nano doesn’t leave any output on the screen after it exits,
 but we can use <code>ls</code> to show that we have indeed created a new file <code>draft.txt</code>:
@@ -1055,7 +1055,7 @@ but <code>ls</code> now shows that we have created a file called <code>draft.txt
 <pre class="text"><code>draft.txt</code></pre>
 <blockquote>
 <p><strong>What’s In A Name?</strong></p>
-<p>All of Amira’s files are named “something dot something”.
+<p>All of Amira’s files are named “something dot something.”
 This is just a convention:
 we can call a file <code>mythesis</code> or almost anything else.
 However,
@@ -1081,7 +1081,7 @@ when someone double-clicks it.</p>
 That isn’t a particularly informative name,
 so let’s change it using <code>mv</code> (short for <strong>m</strong>o<strong>v</strong>e):</p>
 <pre class="shell"><code>$ mv analysis/draft.txt analysis/prior-work.txt</code></pre>
-<p>The first argument tells <code>mv</code> what we are “moving”,
+<p>The first argument tells <code>mv</code> what we are “moving,”
 while the second is where it’s to go:
 here,
 moving <code>analysis/draft.txt</code> to <code>analysis/prior-work.txt</code>
@@ -1352,7 +1352,7 @@ To quit, press <kbd>Q</kbd>.</p>
 most of which isn’t really useful.
 Some commands have a <code>--help</code> option to provide a succinct summary of possibilites,
 but the best place to go for help these days is probably the <a href="https://tldr.sh/">TLDR</a> website.
-The acronym stands for “too long, didn’t read”,
+The acronym stands for “too long, didn’t read,”
 and its help for <code>wc</code> displays this:</p>
 <pre><code>wc
 Count words, bytes, or lines.
@@ -1730,7 +1730,7 @@ we are in fact getting exactly three rows from each of four files.</p>
 <p><strong>Same Symbols, Different Meanings</strong></p>
 <p>The computer displays <code>&gt;</code> as a shell continuation prompt when we are typing,
 but when we type <code>&gt;</code> ourselves,
-it means “redirect output”.
+it means “redirect output.”
 Similarly,
 <code>$</code> is a regular prompt when the computer prints it
 but means “get the value of a variable” when we type.
@@ -1740,7 +1740,7 @@ but there are only so many symbols on a standard keyboard.</p>
 </div>
 <div id="bash-basics-meaningless" class="section level2" number="2.12">
 <h2><span class="header-section-number">2.12</span> What do variable names mean?</h2>
-<p>The short answer to this section’s title is “nothing”.
+<p>The short answer to this section’s title is “nothing.”
 We have called the variable in this loop <code>filename</code>
 to make its purpose clear to human readers,
 but the shell doesn’t care what the variable is called.
@@ -2098,7 +2098,7 @@ produce the output shown?</p>
 <h3><span class="header-section-number">2.15.15</span> Reproduce a directory structure</h3>
 <p>You’re starting a new experiment, and would like to duplicate the directory
 structure from your previous experiment so you can add new data.</p>
-<p>Assume that the previous experiment is in a folder called ‘2016-05-18’,
+<p>Assume that the previous experiment is in a folder called ‘2016-05-18,’
 which contains a <code>data</code> folder that in turn contains folders named <code>raw</code> and
 <code>processed</code> that contain data files. The goal is to copy the folder structure
 of the <code>2016-05-18-data</code> folder into a folder called <code>2016-05-20</code>
@@ -2462,7 +2462,7 @@ and its capacity to access networked machines.</li>
 <li>A relative path specifies a location starting from the current location.</li>
 <li>An absolute path specifies a location from the root of the file system.</li>
 <li>Directory names in a path are separated with <code>/</code> on Unix, but <code>\\</code> on Windows.</li>
-<li><code>..</code> means ‘the directory above the current one’; <code>.</code> on its own means ‘the current directory’.</li>
+<li><code>..</code> means ‘the directory above the current one’; <code>.</code> on its own means ‘the current directory.’</li>
 <li><code>cp old new</code> copies a file.</li>
 <li><code>mkdir path</code> creates a new directory.</li>
 <li><code>mv old new</code> moves (renames) a file or directory.</li>
