--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Kate Hertweck, Damien Irving, Luke Johnston, Joel Ostblom, Charlotte Wickham, Ian Flores Siaca, and Greg Wilson" />
 
 
-<meta name="date" content="2020-11-09" />
+<meta name="date" content="2020-11-22" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -613,12 +613,12 @@ and how familiar people are with that style of organization.</p>
 <p>As with coding style,
 small pieces in predictable places with readable names are easier to find and use
 than large chunks that vary from project to project
-and have names like “stuff”.
+and have names like “stuff.”
 While we can be messy while we are working and then tidy up later,
 experience teaches that we will be more productive if we make tidiness a habit
 and put things in the right place right from the start.
 This lesson therefore describes a widely-used template
-for organizing small and medium-sized data analysis projects <span class="citation">Noble (<a href="references.html#ref-Nobl2009" role="doc-biblioref">2009</a>)</span>.</p>
+for organizing small and medium-sized data analysis projects <span class="citation"><a href="references.html#ref-Nobl2009" role="doc-biblioref">Noble</a> (<a href="references.html#ref-Nobl2009" role="doc-biblioref">2009</a>)</span>.</p>
 <blockquote>
 <p><strong>Version First</strong></p>
 <p>This chapter assumes that a project’s history and development is managed with Git,
@@ -629,7 +629,7 @@ so that you don’t accidentally lose valuable work.</p>
 </blockquote>
 <div id="project-thinking" class="section level2" number="9.1">
 <h2><span class="header-section-number">9.1</span> What is a project?</h2>
-<p>The first decision we have to make is what exactly constitutes a “project” <span class="citation">Wilson et al. (<a href="references.html#ref-Wils2017" role="doc-biblioref">2017</a>)</span>.
+<p>The first decision we have to make is what exactly constitutes a “project” <span class="citation"><a href="references.html#ref-Wils2017" role="doc-biblioref">Wilson et al.</a> (<a href="references.html#ref-Wils2017" role="doc-biblioref">2017</a>)</span>.
 Some examples are:</p>
 <ul>
 <li><p>A dataset that is being used by several research projects.
@@ -703,7 +703,7 @@ or how to install and configure the software needed to start work on the project
 These instructions can also be included as a section in <code>README.md</code>;
 wherever they go,
 remember that the easier it is for people to get set up and contribute,
-the more likely they are to do so <span class="citation">Steinmacher et al. (<a href="references.html#ref-Stei2014" role="doc-biblioref">2014</a>)</span>.</p></li>
+the more likely they are to do so <span class="citation"><a href="references.html#ref-Stei2014" role="doc-biblioref">Steinmacher et al.</a> (<a href="references.html#ref-Stei2014" role="doc-biblioref">2014</a>)</span>.</p></li>
 </ul>
 <p>Even the four core files may seem like a lot,
 but two of these (<code>LICENSE.md</code> and <code>CODE_OF_CONDUCT.md</code>) are usually chosen rather than written (Chapter <a href="teams.html#teams-license">8.3</a>)
@@ -720,7 +720,7 @@ they don’t need to read the files to know what’s there.</p>
 </div>
 <div id="project-organize" class="section level2" number="9.3">
 <h2><span class="header-section-number">9.3</span> How should I structure the rest of my project?</h2>
-<p><span class="citation">Noble (<a href="references.html#ref-Nobl2009" role="doc-biblioref">2009</a>)</span> described a way to organize small bioinformatics projects
+<p><span class="citation"><a href="references.html#ref-Nobl2009" role="doc-biblioref">Noble</a> (<a href="references.html#ref-Nobl2009" role="doc-biblioref">2009</a>)</span> described a way to organize small bioinformatics projects
 that is equally useful for other kinds of research computing.
 Each project is put in a separate Git repository,
 and the directories in the root of this repository are organized according to purpose.
@@ -763,7 +763,7 @@ It does produce long filenames,
 but <a href="glossary.html#tab-completion">tab completion</a> means that we only have to type the full name once.
 Long filenames are just as easy to match in programs:
 Python’s <code>glob</code> and R’s <code>Sys.glob</code> will both take a pattern and return a list of matching filenames.</p>
-<p><span class="citation">Marwick et al. (<a href="references.html#ref-Marw2018" role="doc-biblioref">2018</a>)</span> describes a simple layout:</p>
+<p><span class="citation"><a href="references.html#ref-Marw2018" role="doc-biblioref">Marwick et al.</a> (<a href="references.html#ref-Marw2018" role="doc-biblioref">2018</a>)</span> describes a simple layout:</p>
 <pre><code>├── DESCRIPTION
 ├── README.md
 ├── LICENSE
@@ -850,7 +850,7 @@ which complicates file management even further.</p></li>
 <p>There are three kinds of people in any domain:
 <a href="glossary.html#novice">novices</a>,
 <a href="glossary.html#competent-practitioner">competent practitioners</a>,
-and <a href="glossary.html#expert">experts</a> <span class="citation">Wilson (<a href="references.html#ref-Wils2018" role="doc-biblioref">2019</a><a href="references.html#ref-Wils2018" role="doc-biblioref">a</a>)</span>.
+and <a href="glossary.html#expert">experts</a> <span class="citation"><a href="references.html#ref-Wils2018" role="doc-biblioref">Wilson</a> (<a href="references.html#ref-Wils2018" role="doc-biblioref">2019a</a>)</span>.
 A novice doesn’t yet have a <a href="glossary.html#mental-model">mental model</a> of the domain;
 they don’t know what the key terms are,
 how they relate,
@@ -920,7 +920,7 @@ or what side effects the function has;
 as we discuss below,
 if we need to describe both,
 we should probably rewrite our function.</p>
-<p>An active verb is something like “extract”, “normalize”, or “find”.
+<p>An active verb is something like “extract,” “normalize,” or “find.”
 For example,
 these are all good one-line docstrings:</p>
 <ul>
@@ -1007,7 +1007,7 @@ writing this way forces us to think more clearly about
 what someone might actually be thinking when they need help.
 </dd>
 <dt>Keep each item short.</dt>
-<dd>The “minimal manual” approach to instructional design <span class="citation">Carroll (<a href="references.html#ref-Carr2014" role="doc-biblioref">2014</a>)</span>
+<dd>The “minimal manual” approach to instructional design <span class="citation"><a href="references.html#ref-Carr2014" role="doc-biblioref">Carroll</a> (<a href="references.html#ref-Carr2014" role="doc-biblioref">2014</a>)</span>
 breaks everything down into single-page steps,
 with half of that page devoted to troubleshooting.
 This may feel like baby steps to the person doing the writing,
@@ -1052,7 +1052,7 @@ but these change lists do not include <em>why</em> these changes were made.
 (Some of this may be in version control commit messages,
 but there may be many changes within a single commit.)
 For example,
-documenting that we changed all values like “[1980?]”, “1980?”, and “[[1980]” to “1980” is not enough:
+documenting that we changed all values like “[1980?],” “1980?” and “[[1980]” to “1980” is not enough:
 the question of “What happened here?” as been answered,
 but now <em>why</em>.
 Both pieces must be present for full understanding.</p>
@@ -1160,7 +1160,7 @@ when we come back to this project five months or five years from now.
 Documentation that serves these two groups well
 will almost certainly serve the needs of strangers as well.</p>
 </blockquote>
-<p>These additional rules are taken from <span class="citation">(Goodman et al., <a href="references.html#ref-Good2014" role="doc-biblioref">2014</a>, @Mich2015, @Hart2016, @Zook2017)</span>:</p>
+<p>These additional rules are taken from <span class="citation"><a href="references.html#ref-Zook2017" role="doc-biblioref">Zook et al.</a> (<a href="references.html#ref-Zook2017" role="doc-biblioref">2017</a>)</span>:</p>
 <ul>
 <li><p><strong>Keep raw data raw.</strong>
 Exactly what constitutes “raw” data isn’t always clear:
@@ -1186,7 +1186,7 @@ This doesn’t mean every cell has to have a unique ID;
 instead,
 every datum should have an “address” or location description that can uniquely identify it.
 For example,
-a datum may be “in file <code>ACX-02.csv</code>, under column <code>reading_type</code>, in row 450”.</p>
+a datum may be “in file <code>ACX-02.csv</code>, under column <code>reading_type</code>, in row 450.”</p>
 <p>To achieve this,
 the dataset itself should have a <a href="glossary.html#doi">DOI</a> (Section <a href="publish.html#publish-identifiers">13.1</a>),
 and within the dataset,
@@ -1344,11 +1344,11 @@ that documents the <a href="glossary.html#provenance">provenance</a> and organiz
 </div>
 <div id="exercises" class="section level2" number="9.14">
 <h2><span class="header-section-number">9.14</span> Exercises</h2>
-<p>The exercises explore the dataset from <span class="citation">Meili (<a href="references.html#ref-Meil2015" role="doc-biblioref">2016</a>)</span>
+<p>The exercises explore the dataset from <span class="citation"><a href="references.html#ref-Meil2015" role="doc-biblioref">Meili</a> (<a href="references.html#ref-Meil2015" role="doc-biblioref">2016</a>)</span>
 and try to understand the relationship between the study and the included files.
 Go to the dataset’s page (<a href="http://doi.org/10.3886/E17507V2" class="uri">http://doi.org/10.3886/E17507V2</a>) and download the files.
 You will need to make an ICPSER account and agree to their data agreement before you can download.</p>
-<p>See <span class="citation">Wickes and Stein (<a href="references.html#ref-Wick2016" role="doc-biblioref">2016</a>)</span>. FIXME where should this citation go?</p>
+<p>See <span class="citation"><a href="references.html#ref-Wick2016" role="doc-biblioref">Wickes and Stein</a> (<a href="references.html#ref-Wick2016" role="doc-biblioref">2016</a>)</span>. FIXME where should this citation go?</p>
 <div id="project-ex-understand-project" class="section level3" number="9.14.1">
 <h3><span class="header-section-number">9.14.1</span> Understand a project</h3>
 <p>Review the dataset’s main page to get a sense of the study.
